--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,44 +1,31 @@
-*{
-  font-family: 'Cormorant Garamond', serif;
-}
-.star{
-  width: 202px;
-  height: 202px;
+
+.quater{
+  width: 100px;
+  height: 100px;
+  border-radius: 100px 0 0 0;
+  background-color: black;
+  display: inline-grid;
   position: relative;
-  /* display: grid; */
-  /* display: inline-block; */
-
 }
-.star_part {
-  display: flex;
-  /* display: inline-block; */
-
+.box {
+  width: 100%;
+  height: 100%;
+  background-color: orange;
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+}
+.box_1{
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+  display: grid;
+  grid-template-columns: 50px 50px;
+  grid-template-rows: 50px 50px;
+}
+.small {
   width: 50px;
   height: 50px;
+  display: inline-grid;
   position: relative;
-  border: 2px solid black;
 }
-.one {
-  display: flex;
-  border-radius: 50px 0 0 0;
-  border-right: 0;
-  border-bottom: 0;
-}
-.two {
-  display: flex;
-  border-radius: 0 0 0 50px  ;
-  border-right: 0;
-  border-top: 0;
-}
-.three {
-  display: flex;
-  border-radius: 0  50px 0 0;
-  border-left: 0;
-  border-bottom: 0;
- }
-.four {
-  display: flex;
-  border-radius: 0 0 50px  0;
-  border-left: 0;
-  border-top: 0;
- }
