--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -61,6 +61,13 @@ font-weight: normal;
   grid-template-columns: 5vw 5vw;
   grid-template-rows: 5vw 5vw;
 }
+.small_box_1{
+  width: 10vw;
+  height: 5vw;
+  display: grid;
+  grid-template-columns: 5vw 5vw;
+  grid-template-rows: 5vw ;
+}
 .small {
   width: 5vw;
   height: 5vw;
@@ -111,29 +118,23 @@ font-weight: normal;
   grid-row-start: 3;
   grid-row-end: 5; */
 }
-/* .b_6 {
-  grid-area: 3 / 7 / 5 / 9;
-  grid-column-start: 7;
-  grid-column-end: 9;
-  grid-row-start: 3;
-  grid-row-end: 5; */
-}
+
 .footer{
   width: 100vw;
-  height: 5vw;
   background-color: black;
-  /* position: absolute;
-  bottom:0; */
-  position: relative;
-  
+  height: 5vw;
   display: inline-grid;
+  position: relative;
   grid-column-start: 1;
   grid-column-end: 11;
-}
+  }
+
 .btn {
   width: 20vw;
   height: 20vw;
   /* background-color: orange; */
+  /* outline: solid 5px black; */
+
   border: solid 5px black;
   color: black;
   border-radius: 20vw;
