--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -146,7 +146,9 @@ font-weight: normal;
   font-family: OCRONEC;
   font-size: 18px;
   text-align: center;
+  padding-top: 9vw;
   vertical-align: middle;
+  box-sizing: border-box;
 }
 .btn:hover {
   background-color: black;
