--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -177,9 +177,15 @@ grid-template-rows:  auto;
   font-size: 30px;
   color: black;
 }
+.arrow{
+  width: 5vw;
+  height: 6vw;
+  background-image: url(images/arrow.svg);
+  justify-content: center;
+}
 .top_text{
-  width: 30vw;
-  height: 8vw;
+  width: 100%;
+  height: auto;
   font-family:OCRONEC;
   font-size: 30px;
   color: black;
