--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -159,11 +159,12 @@ grid-template-rows:  auto;
 .setka {
   width: 100vw;
   height: 100vh;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: 50vw 50vw;
   grid-template-rows: 6vw auto 3vw;
   /* background-color: blue; */
   /* opacity: 0; */
+  display: none;
 }
 
 .top_bar {
