--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -101,6 +101,7 @@ grid-template-rows:  auto;
   position: relative;
   grid-column-start: 1;
   grid-column-end: 11;
+  vertical-align: middle;
   }
 
 .btn {
@@ -132,8 +133,8 @@ grid-template-rows:  auto;
 
 
 .info {
-  width: 5vw;
-  height: 5vw;
+  width: 3vw;
+  height: 3vw;
   background-color: white;
 
   position: absolute;
@@ -141,19 +142,36 @@ grid-template-rows:  auto;
 
   mask-type: alpha;
   mask-size: no-repeat;
-  -webkit-mask: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/info_icon.svg)
+
+
+  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/info_icon.svg);
+  -webkit-mask-position:center;
+  -webkit-mask-size: contain;
+      -webkit-mask-type: luminance;
+  /* -webkit-mask-type: alpha; */
+
+
 }
 
+
 .disco {
-  width: 5vw;
-  height: 5vw;
+  width: 3vw;
+  height: 3vw;
   background-color: white;
 
   position: absolute;
   right: 2vw;
 
   mask-type: alpha;
-  -webkit-mask: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/disco_icon.svg)
+  mask-size: no-repeat;
+
+
+  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/disco_icon.svg);
+  -webkit-mask-position:center;
+  -webkit-mask-size: contain;
+    -webkit-mask-type: luminance;
+
+
 }
 
 .setka {
@@ -219,6 +237,8 @@ grid-template-rows:  auto;
   display: grid;
   grid-template-columns: 12.5vw 12.5vw;
   grid-template-rows: 12.5vw 12.5vw;
+  border-bottom: solid 3px black;
+  border-right: solid 3px black;
   /* box-sizing: border-box; */
 
 }
@@ -227,8 +247,11 @@ grid-template-rows:  auto;
   height: 12.5vw;
   display: inline-grid;
   background-color: #fff;
+  border-style: solid;
+  border: solid 3px  black;
 
-  border: solid 3px black;
+  border-right: none;
+  border-bottom: none;
   box-sizing: border-box;
   transition: .1s;
 }
