--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -5,7 +5,7 @@ padding-left: 3vw;
 }
 
 .begin{
-width: 100%;
+width: 100vw;
 height: 100%;
 display: grid;
 grid-template-columns: repeat(10, 1fr);
