--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -4,7 +4,7 @@ padding-left: 3vw;
 
 }
 html{
-  background-color: black;
+  /* background-color: black; */
 
 }
 .begin{
@@ -352,6 +352,13 @@ grid-template-columns: 18vw 25vw 14vw 25vw 18vw;
 }
 /* .container_2 on click s */
 
+.redactor{
+  width: 100vw;
+  height: 100vh;
+  /* opacity: 0; */
+  display: none;
+  transition: .2s;
+}
 
 
 /* .box {
