--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -244,8 +244,10 @@ background-color: white;
   /* grid-gap: 10px; */
   grid-template-columns: 12.5vw 12.5vw;
   grid-template-rows: 12.5vw 12.5vw;
-  border-bottom: solid 3px black;
-  border-right: solid 3px black;
+  /* border:none; */
+  /* border-bottom: solid 3px black; */
+  /* border-right: solid 3px black; */
+  /* outline: solid 3px black; */
   /* box-sizing: border-box; */
   grid-area: 1 / 2 / 2 / 3;
 
@@ -255,12 +257,13 @@ background-color: white;
   height: 12.5vw;
   display: inline-grid;
   background-color: #fff;
-  border-style: solid;
+  /* border-style: solid;
   border: solid 3px  black;
 
   border-right: none;
   border-bottom: none;
-  box-sizing: border-box;
+  box-sizing: border-box; */
+  outline: solid 3px black;
   transition: .1s;
 
 }
@@ -272,8 +275,8 @@ background-color: white;
   /* grid-gap: 10px; */
   grid-template-columns: 6.25vw 6.25vw 6.25vw 6.25vw;
   grid-template-rows: 6.25vw 6.25vw 6.25vw 6.25vw;
-  border-bottom: solid 3px black;
-  border-right: solid 3px black;
+  /* border-bottom: solid 3px black;
+  border-right: solid 3px black; */
   /* box-sizing: border-box; */
 
 
@@ -286,12 +289,13 @@ grid-area: 1 / 4 / 2 /5;
   height: 6.25vw;
   display: inline-grid;
   background-color: #fff;
-  border-style: solid;
+  /* border-style: solid;
   border: solid 3px  black;
 
   border-right: none;
   border-bottom: none;
-  box-sizing: border-box;
+  box-sizing: border-box; */
+  outline: solid 3px black;
   transition: .1s;
 }
 
@@ -312,16 +316,14 @@ grid-template-columns: 18vw 25vw 14vw 25vw 18vw;
 }
 .conteiner_2:hover .square_2 {
   background-color: black;
-  border: solid 3px white;
-  border-right: none;
-  border-bottom: none;
+  outline: solid 3px white;
+
 }
 .conteiner_4:hover .square_4 {
   background-color: black;
   color: white;
-  border: solid 3px white;
-  border-right: none;
-  border-bottom: none;
+  outline: solid 3px white;
+
   transition: .2s;
 }
 .conteiner_2:hover, .conteiner_4:hover {
@@ -344,10 +346,7 @@ grid-template-columns: 18vw 25vw 14vw 25vw 18vw;
 }
 .fill{
   background-color: black;
-  color: white;
-  border: solid 3px white;
-  border-right: none;
-  border-bottom: none;
+  outline: solid 3px white;
   transition: .2s;
 }
 /* .container_2 on click s */
