--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -7,6 +7,51 @@ html{
   /* background-color: black; */
 
 }
+
+.info {
+  width: 3vw;
+  height: 3vw;
+  background-color: white;
+
+  position: absolute;
+  left: 2vw;
+
+  mask-type: alpha;
+  mask-size: no-repeat;
+
+
+  mask-type: alpha;
+      -webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
+      mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
+/*
+  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/info_icon.svg);
+  -webkit-mask-position:center;
+  -webkit-mask-size: contain;
+      -webkit-mask-type: luminance; */
+  /* -webkit-mask-type: alpha; */
+
+
+}
+
+
+.disco {
+  width: 3vw;
+  height: 3vw;
+  background-color: white;
+
+  position: absolute;
+  right: 2vw;
+
+  mask-type: alpha;
+  mask-size: no-repeat;
+
+
+  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/disco_icon.svg);
+  -webkit-mask-position:center;
+  -webkit-mask-size: contain;
+    -webkit-mask-type: luminance;
+}
+
 .begin{
 width: 100vw;
 height: 100%;
@@ -128,6 +173,7 @@ background-color: white;
   padding-top: 9vw;
   vertical-align: middle;
   box-sizing: border-box;
+  transition: .4/
 }
 .btn:hover {
   background-color: black;
@@ -135,52 +181,6 @@ background-color: white;
   transition: .2s;
 }
 
-
-.info {
-  width: 3vw;
-  height: 3vw;
-  background-color: white;
-
-  position: absolute;
-  left: 2vw;
-
-  mask-type: alpha;
-  mask-size: no-repeat;
-
-
-  mask-type: alpha;
-      -webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
-      mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
-/*
-  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/info_icon.svg);
-  -webkit-mask-position:center;
-  -webkit-mask-size: contain;
-      -webkit-mask-type: luminance; */
-  /* -webkit-mask-type: alpha; */
-
-
-}
-
-
-.disco {
-  width: 3vw;
-  height: 3vw;
-  background-color: white;
-
-  position: absolute;
-  right: 2vw;
-
-  mask-type: alpha;
-  mask-size: no-repeat;
-
-
-  -webkit-mask-image: url(https://raw.githubusercontent.com/Kovriki/interactive_web_poster/2a1dcc8b54ab0b3c49c348e5897e5a21c34135f3/images/disco_icon.svg);
-  -webkit-mask-position:center;
-  -webkit-mask-size: contain;
-    -webkit-mask-type: luminance;
-
-
-}
 
 .setka {
   width: 100vw;
@@ -208,6 +208,8 @@ background-color: white;
       justify-content: center;
       display: flex;
       align-items: center;
+      transition: all .4s;
+
 }
 .btn_dalee p {
   font-family:OCRONEC;
@@ -217,10 +219,17 @@ background-color: white;
   /* padding-left: 3vw; */
   padding-right: 10px;
   display: inline-grid;
+  transition: all .4s;
+
 }
-.btn_dalee:hover{
+.btn_dalee:hover {
   background-color: black;
-  color: white
+  transition: all .1s;
+}
+.btn_dalee:hover > p{
+  color: white;
+  transition: all .1s;
+
 }
 
 .arrow{
@@ -371,21 +380,33 @@ grid-template-columns: 18vw 25vw 14vw 25vw 18vw;
 .center_gap_3p{
   width: 100vw;
   height: auto;
-align-content: center;
+vertical-align: middle;
 justify-content: center;
+display: flex;
 }
 
 
 .redactor_div {
   width: 40vw;
   height: 40vw;
-  display: inline-grid;
+  display: grid;
+  grid-template-columns: repeat(4, 10vw);
+  grid-template-rows: repeat(4, 10vw);
   border: solid 3px black;
   background-color: #fff;
 }
 
 .red_square{
-
+    width:10vw;
+    height: 10vw;
+    display:inline-grid;
+    border-radius: 0 0 0 10vw;
+    background-color: black;
+}
+.btn_trans{
+  width: 6vw;
+  height: 6vw;
+  border: 3px solid black;
 }
 /* .box {
   width: 100%;
