--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -32,6 +32,35 @@ html{
 
 
 }
+.inf_icon {
+  width: 40px;
+  height: 40px;
+display: block;
+position: relative;
+-webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/info_icon.svg");
+mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/info_icon.svg");
+background-color: white;
+mask-type: alpha;
+transition: .4s
+}
+
+
+.disco_icon {
+  width: 40px;
+  height: 50px;
+display: block;
+position: absolute;
+right: 2vw;
+-webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
+mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
+background-color: white;
+mask-type: alpha;
+mask-repeat: no-repeat;
+box-sizing: border-box;
+}
+
+
+
 
 
 .disco {
@@ -231,14 +260,30 @@ background-color: white;
   transition: all .1s;
 
 }
-
-.arrow{
+.btn_dalee:hover > .arrow_mask{
+  background-color: white;
+  transition: .1s;
+}
+.arrow_1{
   width: auto;
   height: au;
   /* background-image: url(images/arrow.svg); */
   background: url(images/arrow.svg);
   display: inline-grid;
   /* justify-content: center; */
+}
+
+
+.arrow_mask {
+width: 5vw;
+height: 4vw;
+display: block;
+position: relative;
+-webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/arrow.svg");
+mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/arrow.svg");
+background-color: black;
+mask-type: alpha;
+transition: .4s
 }
 .top_text{
   width: 20vw;
@@ -409,9 +454,15 @@ display: flex;
   border: 3px solid black;
 }
 
-.space{
-  
-}
+
+/* .arrow_mask:hover{
+  background-color: white;
+  transition: .3s;
+} */
+
+
+
+
 /* .box {
   width: 100%;
   height: 100%;
