--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -39,6 +39,8 @@ mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190
 background-color: white;
 mask-type: alpha;
 transition: .4s;
+-webkit-mask-repeat: no-repeat;
+-webkit-mask-size: contain;
 }
 
 
@@ -55,6 +57,8 @@ background-color: white;
 mask-type: alpha;
 mask-repeat: no-repeat;
 box-sizing: border-box;
+-webkit-mask-repeat: no-repeat;
+-webkit-mask-size: contain;
 }
 
 
