--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -407,7 +407,8 @@ grid-template-columns: 18vw 25vw 14vw 25vw 18vw;
   border-top: solid 3px black;
   grid-area: 3/1/4/2;
   display: inline-grid;
-  position: relative;
+  position: absolute;
+      bottom: 0;
   margin-bottom: 0;
 }
 .footer_2p .footer {
