--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -467,7 +467,7 @@ display: flex;
 .final {
   width: 100vw;
   height: 100vh;
-  display: none;
+  /* display: grid; */
   transition: .2s;
   background-color: white;
 }
@@ -494,7 +494,12 @@ display: flex;
   background-color: blue;
 }
 #containment-wrapper { width: 100%; height:100%; padding-top: 5px; }
-
+.s_p_btn {
+width: 25vw;
+height: 8vw;
+border: solid 4px black;
+/* border-radius: 2vw; */
+}
 /* .arrow_mask:hover{
   background-color: white;
   transition: .3s;
@@ -502,7 +507,7 @@ display: flex;
 
 
 
-
+#redactor_id{}
 /* .box {
   width: 100%;
   height: 100%;
