--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -507,7 +507,10 @@ border: solid 4px black;
 
 
 
-#redactor_id{}
+#redactor_id{
+  width: 10vw;
+  height: 10vw;
+}
 /* .box {
   width: 100%;
   height: 100%;
