--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -508,8 +508,12 @@ border: solid 4px black;
 
 
 #redactor_id{
-  width: 10vw;
-  height: 10vw;
+  width: 50vw;
+  height: 50vw;
+}
+#redactor_id_in .conteiner_2{
+  width: 100px;
+  height: 100px;
 }
 /* .box {
   width: 100%;
