--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,4 @@
 @import "reset.css";
 /* @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,600&display=swap'); */
 @import "content.css";
+@import "adaptive.css";
