--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -18,11 +18,11 @@ body{
   width: 50vw;
   height:auto;
   position: absolute;
-  left: 70px;
-  top: 25px;
+  /* left: 70px;
+  top: 25px; */
   opacity: 0;
   transition: all .8s;
-
+    grid-area: 1/2/2/3;
   font-family:OCRONEC;
   font-size: 16px;
   color: white;
@@ -41,7 +41,7 @@ body{
   height: 40px;
 display: block;
 position: relative;
-top:10px;
+/* top:10px; */
 left: 20px;
 -webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/info_icon.svg");
 mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/info_icon.svg");
@@ -59,7 +59,7 @@ transition: .4s;
   height: 50px;
 display: block;
 position: absolute;
-top: 5px;
+/* top: 5px; */
 right: 20px;
 -webkit-mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
 mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/e1f721771111b252e273ba383fb3986c68458f16/images/disco_icon.svg");
@@ -172,8 +172,11 @@ background-color: white;
 .footer{
   width: 100vw;
   background-color: black;
-  height: 6vw;
-  display: inline-grid;
+  height: 85px;
+  display: grid;
+  grid-template-columns: 1fr 12fr 1fr;
+  align-content: center;
+  align-items: center;
   position: relative;
   bottom: 0;
   grid-column-start: 1;
@@ -222,7 +225,7 @@ background-color: white;
 
 .top_bar {
   width: 100vw;
-  height: 6vw;
+  height: 85px;
   border-bottom: solid 5px black;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -231,23 +234,24 @@ background-color: white;
 .redactor .top_bar {
 
     width: 100vw;
-    height: 6vw;
+    height: 85px;
     border-bottom: solid 5px black;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
 }
 .btn_dalee{
-  width: 20vw;
-      height: 6vw;
-
-      /* display: inline-grid; */
-      /* grid-area: 1/2/2/3; */
-      justify-content: center;
-      display: flex;
-      align-items: center;
-      transition: all .4s;
-      margin-left: auto
+  width: 25vw;
+  */: ;
+  height: 85px;
+  justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  transition: all .4s;
+  right: 2vw;
+  /* margin-right: 2vw;  */
+  margin-left: 20vw;
+    justify-self: end;
 }
 .btn_dalee p {
   pointer-events: none;
@@ -256,7 +260,7 @@ background-color: white;
   color: black;
   /* padding-top: 1.5vw; */
   /* padding-left: 3vw; */
-  padding-right: 10px;
+  /* padding-right: 10px; */
   display: inline-grid;
   transition: all .4s;
 }
@@ -296,19 +300,22 @@ position: relative;
 mask: url("https://raw.githubusercontent.com/Kovriki/interactive_web_poster/5190b4d7b114d723412d45c14437fcbe5aa4b717/images/arrow.svg");
 background-color: black;
 mask-type: alpha;
-transition: .4s
+padding-right: 4vw;
+transition: .4s;
+-webkit-mask-position: center;
 -webkit-mask-size: contain;
 -webkit-mask-repeat: no-repeat;
 }
 .top_text{
-  width: 20vw;
-  height: 6vw;
+  width: 50vw;
+  height: 85px;
   font-family: OCRONEC;
   font-size: 30px;
   color: black;
   display: flex;
   /* grid-area: 1 / 1 / 2 / 2; */
-  justify-content: center;
+  justify-content: left;
+  margin-left: 2vw;
   align-items: center;
 }
 .conteiner_2 {
@@ -355,7 +362,7 @@ transition: .4s
 
 .center_gap{
   width: 100vw;
-  height: 90vh;
+  height: calc(100vh - 170px);
   align-content: center;
   align-items: flex-start;
   justify-items: center;
@@ -382,7 +389,7 @@ transition: .4s
 
 .footer_2p{
   width: 100vw;
-  height:auto;
+  height: 85px;
   border-top: solid 5px black;
   grid-area: 3/1/4/2;
   display: inline-grid;
@@ -417,9 +424,26 @@ transition: .4s
 .center_gap_3p{
   width: 100vw;
   height: auto;
-vertical-align: middle;
-justify-content: center;
-display: flex;
+  /* vertical-align: middle; */
+  /* justify-content: center; */
+  display: flex;
+  width: 100vw;
+  height: calc(100vh - 170px);
+  /* justify-items: center; */
+  /* display: grid;*/
+
+}
+.center_gap_4p{
+  width: 100vw;
+  height: auto;
+  vertical-align: middle;
+  justify-content: center;
+  display: flex;
+  width: 100vw;
+  height: calc(100vh - 170px);
+  justify-items: center;
+  display: grid;
+
 }
 .photo{
   width: 100vw;
@@ -435,13 +459,30 @@ display: flex;
 .redactor_div {
   width: 40vw;
   height: 40vw;
-  display: grid;
+  /* display: grid; */
+  display: none;
   grid-template-columns: repeat(4, 10vw);
   grid-template-rows: repeat(4, 10vw);
   border: solid 3px black;
   background-color: #fff;
 }
-
+.redactor_div_2{
+  width: 40vw;
+  height: 40vw;
+  /* display: grid; */
+  display: none;
+  grid-template-columns: repeat(2, 20vw);
+  grid-template-rows: repeat(2, 20vw);
+  border: solid 3px black;
+  background-color: #fff;
+}
+.red_square_2{
+  width: 20vw;
+  height: 20vw;
+  display:inline-grid;
+  border-radius: 0 0 0 10vw;
+  background-color: black;
+}
 .red_square{
     width:10vw;
     height: 10vw;
@@ -456,6 +497,7 @@ display: flex;
   justify-content: center;
   margin: auto;
   border-top: none;
+  display: none;
 }
 .circle{
   width: 4.5vw;
@@ -519,15 +561,15 @@ border: solid 4px black;
 }
 #p2{
     font-family:OCRONEC;
-    font-size: 16px;
+    font-size: 20px;
     grid-area: 3/2/4/3;
-    /* margin-top: 20px; */
+    margin-top: 20px;
 }
 #p4{
   font-family:OCRONEC;
-  font-size: 16px;
+  font-size: 20px;
   grid-area: 3/4/4/5;
-  /* margin-top: 20px; */
+  margin-top: 20px;
 }
 #redactor_id{
   width: 50vw;
