--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -423,8 +423,9 @@ transition: .4s;
 
 .center_gap_5p{
   width: 100vw;
-  height: auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr 4fr 1fr;
+  grid-template-rows: 2fr 1fr .5fr 1fr 2fr;
   width: 100vw;
   height: calc(100vh - 170px);
 
@@ -557,7 +558,7 @@ transition: .4s;
   border-radius: 2vw;
   /* text-align: center; */
   display: inline-grid;
-  grid-area: 1/3/2/4;
+  grid-area: 2/3/3/4;
   justify-content: center;
   align-items: center;
 }
@@ -567,7 +568,7 @@ transition: .4s;
   border: solid 4px black;
   border-radius: 2vw;
   display: inline-grid;
-  grid-area: 3/3/4/4;
+  grid-area: 4/3/5/4;
   justify-content: center;
   align-items: center;
 }
@@ -602,6 +603,8 @@ transition: .4s;
   width: 40vw;
   height: 40vw;
   overflow: hidden;
+  display: inline-grid;
+  /* column-st */
 }
 #portable_2 {}
 /* .box {
