--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -228,6 +228,7 @@ background-color: white;
   width: 100vw;
   height: 85px;
   border-bottom: solid 5px black;
+  background-color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
@@ -436,7 +437,19 @@ transition: .4s;
   display: flex;
   width: 100vw;
   height: calc(100vh - 170px);
+  /* background-image: url(../images/photo.svg); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 
+}
+
+
+body .dragg{
+  background-image: url(../images/photo.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .center_gap_4p{
 
@@ -604,9 +617,16 @@ transition: .4s;
   height: 40vw;
   overflow: hidden;
   display: inline-grid;
+      grid-area: 1/1/3/3;
   /* column-st */
 }
 #portable_2 {}
+  a{
+    color:black;
+    text-decoration: none;
+    display: inline-grid;
+    grid-area: 2/4/3/5;
+  }
 /* .box {
   width: 100%;
   height: 100%;
