--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -480,7 +480,7 @@ body .dragg{
   grid-template-rows: repeat(4, 10vw);
   border: solid 3px black;
   background-color: #fff;
-  /* margin-top: 35px; */
+  margin-top: 35px;
 }
 .redactor_div_2{
   width: 40vw;
@@ -561,7 +561,7 @@ body .dragg{
 .blue{
   width: 100px;
   height: 100px;
-  background-color: blue;
+  /* background-color: blue; */
 }
 #containment-wrapper { width: 100%; height:100%; padding-top: 5px; }
 .s_p_btn {
