--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -14,6 +14,7 @@ body{
   position: relative;
    overflow: hidden;
     font-family:OCRONEC;
+    cursor: url('../images/cursor.png');
 }
 .comments{
   width: 50vw;
@@ -254,6 +255,8 @@ background-color: white;
   /* margin-right: 2vw;  */
   margin-left: 20vw;
     justify-self: end;
+    /* cursor: url("../images/arrow.png"), 2 2, pointer; */
+    cursor: pointer;
 }
 .btn_dalee p {
   pointer-events: none;
@@ -265,13 +268,15 @@ background-color: white;
   /* padding-right: 10px; */
   display: inline-grid;
   transition: all .4s;
+  /* cursor: url("../images/arrow.png"), auto; */
+  cursor: pointer;
 }
 .bg_black{
   background-color: black;
   color: white;
 }
 .btn_dalee:hover {
-  cursor: 
+  cursor: url("../images/arrow.png"), auto;
   background-color: black;
   transition: all .1s;
 }
