--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -169,7 +169,7 @@
 
 }
 
-@media print {
+/* @media print {
   *{
     display: none;
   }
@@ -182,7 +182,7 @@
   #import {
     display: grid !important;
   }
-}
+} */
 /*
 1680x1050 (MacBook Pro ’15.4)
 
